--- a/catalog/view/theme/default/template/checkout/checkout/_shipping_address.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_shipping_address.twig
@@ -1,5 +1,5 @@
 <div class="checkout-section" id="shipping-address-section"  style="display: {{ logged ? 'block' : 'none' }};">
-  <h2>{{ text_checkout_shipping_address }}</h2>
+  {#<h2>{{ text_checkout_shipping_address }}</h2>#}
   <form class="">
     {% if logged %}
     {% if addresses %}
