--- a/catalog/view/theme/default/template/checkout/checkout/_comment.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_comment.twig
@@ -1,4 +1,4 @@
 <div class="checkout-section" id="comment-section">
-  <h2>{{ text_comments }}</h2>
+  <p>{{ text_comments }}</p>
   <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
 </div>
