--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -30,10 +30,15 @@
   <link media="all" href="catalog/view/theme/default/css/category.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/goods-db2c456a45.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/orderdetails.css" type="text/css" rel="stylesheet">
+
+  <script src="catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
+  <script src="catalog/view/javascript/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="catalog/view/javascript/layer/layer.js" type="text/javascript"></script>
+  <script src="catalog/view/javascript/common.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="header_common">
-  <script src="catalog/view/theme/default/js/jquery-new.mins.js" type="text/javascript"></script>
+  {#<script src="catalog/view/theme/default/js/jquery-new.mins.js" type="text/javascript"></script>#}
   <div class="c-header">
     <div class="header-wrap">
       <div class="container-fluid mar-b-0">
